--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "isomorphic",
-  "version": "0.0.1",
-  "description": "isomorphic demo app",
-  "repository": "",
+  "name" : "Arunkumar",
+, "email" : "Arunkumarms@outlook.com",  
+  "version": "0.9.0",
+  "description": "isomorphic experimental app",
+  "main": "app.js",
   "dependencies": {
     "babelify": "^6.4.0",
     "browserify": "^12.0.1",
